[gd_scene load_steps=9 format=3 uid="uid://be7ocycro27sh"]

[ext_resource type="Script" path="res://actors/Traps/spear.gd" id="1_n72s6"]
[ext_resource type="Texture2D" uid="uid://cqfmbpwukgyln" path="res://actors/Traps/Spear.png" id="1_r2e8d"]
[ext_resource type="AudioStream" uid="uid://b61s5ngeft26e" path="res://actors/Traps/Spear.mp3" id="3_pbg42"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohfk2"]
size = Vector2(9, 64)

[sub_resource type="Animation" id="Animation_c8ks3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spear:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spear:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fe7nq"]
resource_name = "spike_in"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spear:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spear:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 9, 8, 5, 4, 3, 2, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.875),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_wwxaw"]
resource_name = "spike_out"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spear:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spear:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 8, 9, 11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gc765"]
_data = {
"RESET": SubResource("Animation_c8ks3"),
"spike_in": SubResource("Animation_fe7nq"),
"spike_out": SubResource("Animation_wwxaw")
}

[node name="Spear" type="Area2D"]
process_mode = 1
texture_filter = 1
scale = Vector2(4.504, 4.504)
collision_layer = 4
script = ExtResource("1_n72s6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -26)
shape = SubResource("RectangleShape2D_ohfk2")

[node name="Spear" type="Sprite2D" parent="."]
position = Vector2(0, -26)
texture = ExtResource("1_r2e8d")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gc765")
}

[node name="SpikeOff" type="Timer" parent="."]
wait_time = 4.0

[node name="SpikeOn" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pbg42")
volume_db = -9.409
max_distance = 600.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SpikeOff" to="." method="_on_spike_off_timeout"]
[connection signal="timeout" from="SpikeOn" to="." method="_on_spike_on_timeout"]
